--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ fecha: 18 enero
 <details>
 	<summary>INDICE de mi repositorio publico:</summary>
 	<ul>
-		<li><a href="file:///C:/Users/Alejandro/Desktop/Git%20Carlos/publico/ejercicios/fintrimestre.html">Ejercicio fin de trimestre</a></li>
+		<li><a href="ejercicios/fintrimestre.html">Ejercicio fin de trimestre</a></li>
 	</ul>
 </details>
 
