--- a/ejercicios/Condor/menusuperior.html
+++ b/ejercicios/Condor/menusuperior.html
@@ -140,14 +140,14 @@ li.dropdown {
 	<div class="menu">
 	
 	<ul>
-  <li><a class="active" href="file:///C:/Users/1DAM/Desktop/Condor/menusuperior.html">Pagina principal</a></li>
+  <li><a class="active" href="./menusuperior.html">Pagina principal</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Links de utilidad</a>
     <div class="dropdown-content">
       <a href="https://www.reddit.com/" target="_blank" >Reddit</a>
       <a href="https://es.wikipedia.org/wiki/Wikipedia:Portada" target="_blank">Wikipedia</a>
       <a href="https://www.rae.es/" target="_blank" >Rae</a>
-  <li><a href="file:///C:/Users/1DAM/Desktop/Condor/condor.html">Condor</a></li>
+  <li><a href="./condor.html">Condor</a></li>
   <li><a href="#about">Prueba</a></li>
 </ul>
 	</div>
