--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@ fecha: 18 enero
 <details>
 	<summary>INDICE de mi repositorio publico:</summary>
 	<ul>
-		<li><a href="ejercicios/fintrimestre.html">Ejercicio fin de trimestre</a></li>
+		<li><a href="ejercicios/fintrimestre.html">Ejercicio fin del primer trimestre</a></li>
         <li><a href="https://www.reddit.com/r/HistoryMemes/" >Link reddit historia(prueba)</a></li>
+        <li><a href="ejercicios/fintrimestre.html">Trabajo proyecto integrador</a></li>
 	</ul>
 </details>
 
