--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ fecha: 18 enero
 	<ul>
 		<li><a href="ejercicios/fintrimestre.html">Ejercicio fin del primer trimestre</a></li>
         <li><a href="https://www.reddit.com/r/HistoryMemes/" >Link reddit historia(prueba)</a></li>
-        <li><a href="ejercicios/fintrimestre.html">Trabajo proyecto integrador</a></li>
+        <li><a href="./trabajo-final/Trabajo-final.html">Trabajo proyecto integrador</a></li>
 	</ul>
 </details>
 
