Update  efectos Dolly y Ken

--- a/trabajo-final/index.html
+++ b/trabajo-final/index.html
@@ -27,7 +27,13 @@
         <ul class="links-nav">
           <li><a href="./index.html"><img src=".\media\inicio.png" class="imagen-menu" >Inicio </a></li>
           <li><a href="./tienda.html"><img src=".\media\tienda.png" class="imagen-menu" >Tienda</a></li>
-          <li><a href="#ayuda"><img src=".\media\ayuda.png" class="imagen-menu" >Ayuda</a></li>
+          <li><div class="dropdown">
+            <button class="dropbtn">Ejercicios Extra</button>
+            <div class="dropdown-content">
+              <a href="./dolly.html">Dolly Zoom</a>
+              <a href="./Kent.html">Ken Burns</a>
+              
+            </div></li>
           <li><a href="./login.html"> <img src=".\media\usuario.png" class="imagen-menu" >Login </a></li>
         </ul>
       </nav>
