--- a/trabajo-final/Kent.html
+++ b/trabajo-final/Kent.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="./inicio_de_sesion.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     
     
@@ -21,7 +22,7 @@
   </head>
   
   
-  <body >
+  <body onload="controlar()">
       <div id="fullpage">
           <section class="section s1" >
     <header>
